--- a/八月工作.md
+++ b/八月工作.md
@@ -1,5 +1,15 @@
 # 八月份每日工作
+tags: ```lab``` ```2020``` ```August```
 
-## 0803
+
+
+## July 31
+https://www.notion.so/216808441d1946f48878c64c8ab090d4?v=236abf26a48d4e5c8fe527f20c75d031
+
+## August 03
+### Survey
+
+
+### Goals
 - 找VAT以後的papers 可能和Graph結合的方式
 - 找attack on graph-based RS的可能加入VAT的方式
