--- a/八月工作.md
+++ b/八月工作.md
@@ -106,7 +106,48 @@ survey papers and notes
 
 
 #### others
-- [ ] link prediction 現有的code之input output
+- [x] link prediction 現有的code之input output
 - [ ] 找VAT以後的papers 可能和Graph結合的方式
 - [ ] 找attack on graph-based RS的可能加入VAT的方式
+
+## August 4
+
+- [x] 了解Link prediction based on GNN建立subgraph的方式
+- [x] 推薦系統閱讀：KGAT
+
+### Graph Defense
+:::spoiler on structure
+- Adversarial Training Methods for Network Embedding
+    - DeepWalk
+- Adversarial Robustness of Similarity-Based Link Prediction
+    - Bayesian
+- Adversarial Attack on Graph Structured Data
+    - RL 
+- Topology Attack and Defense for Graph Neural Networks: An Optimization Perspective
+    - GNN
+:::
+:::spoiler on attribute
+- Latent Adversarial Training of Graph Convolution Networks
+    - GCN based
+    - 在latent H上面加入擾動，比起在raw features上擾動，會更有generalization
+- GraphDefense: Towards Robust Graph Convolutional Networks
+- [Batch Virtual Adversarial Training for Graph Convolutional Networks](https://www.notion.so/Batch-virtual-adversarial-training-for-graph-convolutional-networks-dbf8320758554240b0ba6e5d9007269d)
+    - GCN based
+    - semi-supervised
+    - 改良VAT，提出
+        - sample-based VAT
+        - optimizier-based VAT
+- Virtual Adversarial Training on Graph Convolutional Networks in Node Classification
+    - 同向南大大的
+- Adversarial Defense Framework for Graph Neural Network
+    - GNN based
+    - DefNet
+:::
+
+
+
+---
+
+[推薦系統on graph](https://zhuanlan.zhihu.com/p/66521058)
+
 
