--- a/八月工作.md
+++ b/八月工作.md
@@ -40,7 +40,7 @@ survey papers and notes
 - [x] 跑code
 - [x] 討論
 
-:::spoiler 三種想法
+:::spoiler 想法
 1. ~~考量相同degree的prediction應該類似~~
 2. 套用在community detection上，model結果是屬於每群的機率
 3. 用在RS上面，input可以是user&user+r或item&item+r，限制出來的rs結果要相似
@@ -59,7 +59,7 @@ survey papers and notes
 
 - [x] [RippleNet](https://www.notion.so/RippleNet-d6860f1f1e7b47b8a0d4c1a369170a01)
 - [x] [KGCN](https://www.notion.so/KGCN-3446823d934f4956b84c5e515f2d76da)
-- [ ] [MKR](https://www.notion.so/MKR-40679c0cb7aa43b08afde212c940c237)
+- [x] [MKR](https://www.notion.so/MKR-40679c0cb7aa43b08afde212c940c237)
 
 #### Link Prediction
 - [x] [Link Prediction Based on Graph Neural Networks](https://www.notion.so/Link-Prediction-Based-on-Graph-Neural-Networks-891950ef524249ecab94d612ae54eed4)
@@ -80,29 +80,36 @@ survey papers and notes
 7. smoothness是在指甚麼？為甚麼這邊的node classification要強調smoothness但是一般的nc只計算CEloss？
 :::
 
-## August 03
-
-#### 在AT上找在VAT之後的手法
+## August 3
+[Notion](https://www.notion.so/2402e3ec941a451f83790900a0f774da?v=0b66402e223e4caeb66909d631ef38e6)
+:::spoiler 在AT上找在VAT之後的手法
 - [ ] [Bidirectional Adversarial Training for Semi-Supervised Domain Adaptation](https://www.notion.so/Bidirectional-Adversarial-Training-for-Semi-Supervised-Domain-Adaptation-a0efd0b7e9d94f61acdc8e3df850a0bd)
     - 改良VAT
 - [ ] [Mutual Improvement Between Temporal Ensembling and Virtual Adversarial Training](https://www.notion.so/Mutual-Improvement-Between-Temporal-Ensembling-and-Virtual-Adversarial-Training-80cbdfaee5ea4c0e8e29cef2798657d0)
-    - 改良VAT
-- [ ] [Joint Energy-Based Models for Semi-Supervised Classification](https://www.notion.so/Joint-Energy-Based-Models-for-Semi-Supervised-Classification-734b1cd69fd44fa5be3b93dc3483fcee)
+    - 改良VAT：更改產生擾動的方式並加快訓練速度
+    - 引入ensemble的方式訓練
+- [ ] [Adversarial Training and Robustness for Multiple Perturbations](https://www.notion.so/Adversarial-Training-and-Robustness-for-Multiple-Perturbations-92af7a7e830044c39e3fad572a8b72be)
+    - different types of perturbations simultaneously：gradients當作一種攻擊形式，同時還考量了其他種不同的可能的攻擊形式，一起做AT
+- [ ] Fast is better than free: Revisiting adversarial training
+    - 用FGSM跟random initialized的方式解決AT高成本問題。
+- [ ] [Adversarial Training for Free!](https://www.notion.so/Adversarial-Training-for-Free-a0c023b770074b7c858d92d0919f275c)
+    - 每個mini-batch只算一個gradients去做，而不是針對每一個樣本都算獨自的gradients，減少計算量
+- [ ] [Transferable Adversarial Training: A General Approach to Adapting Deep Classifiers](https://www.notion.so/Transferable-Adversarial-Training-A-General-Approach-to-Adapting-Deep-Classifiers-e1ff90f9429d46b6bf924e1056c7dce3)
+    - domain adaption/類似GAN的架構去做AT
+- [ ] [Defense Against Adversarial Attacks Using Feature Scattering-based Adversarial Training](https://www.notion.so/Defense-Against-Adversarial-Attacks-Using-Feature-Scattering-based-Adversarial-Training-ecfab7dabc414a03896fa77c99fa51a5)
+    - 大致上概念類似，也是在X上面加擾動，遞迴式地加
+- [ ] [Adversarial Transformations for Semi-Supervised Learning](https://www.notion.so/Adversarial-Transformations-for-Semi-Supervised-Learning-a88557c507ad4c968f3226878c8a3679)
+    - 改動epsilon的限制方式
 - [ ] [On the Convergence and Robustness of Adversarial Training](https://www.notion.so/On-the-Convergence-and-Robustness-of-Adversarial-Training-2295162a4ffe4334bc7bafb193bcd19e)
     - ICML/改善AT的運算 dynamic PGD
 - [ ] [Adversarial Transformations for Semi-Supervised Learning](https://www.notion.so/Adversarial-Transformations-for-Semi-Supervised-Learning-ffe290ff33774f21ac3c01f6bf20056d)
     - 改善VAT/數學
 - [ ] [Bilateral Adversarial Training: Towards Fast Training of More Robust Models Against Adversarial Attacks](https://www.notion.so/Bilateral-Adversarial-Training-Towards-Fast-Training-of-More-Robust-Models-Against-Adversarial-Atta-c532d605268246e3bcd0022ab5660fa8)
     - ICCV/數學式很多 求adv的方式不太一樣/但概念類似
-- [ ] [Adversarial Training for Free!](https://www.notion.so/Adversarial-Training-for-Free-a0c023b770074b7c858d92d0919f275c)
-    - 每個mini-batch只算一個gradients去做，而不是針對每一個樣本都算獨自的gradients，減少計算量
-- [ ] [Transferable Adversarial Training: A General Approach to Adapting Deep Classifiers](https://www.notion.so/Transferable-Adversarial-Training-A-General-Approach-to-Adapting-Deep-Classifiers-e1ff90f9429d46b6bf924e1056c7dce3)
-- [ ] [Defense Against Adversarial Attacks Using Feature Scattering-based Adversarial Training](https://www.notion.so/Defense-Against-Adversarial-Attacks-Using-Feature-Scattering-based-Adversarial-Training-ecfab7dabc414a03896fa77c99fa51a5)
-- [ ] [Adversarial Transformations for Semi-Supervised Learning](https://www.notion.so/Adversarial-Transformations-for-Semi-Supervised-Learning-a88557c507ad4c968f3226878c8a3679)
-- [ ] [Adversarial Training and Robustness for Multiple Perturbations](https://www.notion.so/Adversarial-Training-and-Robustness-for-Multiple-Perturbations-92af7a7e830044c39e3fad572a8b72be)
-    - different types of perturbations simultaneously：gradients當作一種攻擊形式，同時還考量了其他種不同的可能的攻擊形式，一起做AT
-- [ ] Fast is better than free: Revisiting adversarial training
-    - 用FGSM跟random initialized的方式解決AT高成本問題。
+- [ ] [Joint Energy-Based Models for Semi-Supervised Classification](https://www.notion.so/Joint-Energy-Based-Models-for-Semi-Supervised-Classification-734b1cd69fd44fa5be3b93dc3483fcee)
+:::
+
+
 
 
 #### others
@@ -144,6 +151,12 @@ survey papers and notes
     - DefNet
 :::
 
+## August 5
+- [x] 請cw跑[對照組實驗(何向南、SVAT OVAT)](https://docs.google.com/spreadsheets/d/1_vNZXMDKKCyYl0X6YyPbe9j0Aarkm4nczVmaS0I9wlI/edit?fbclid=IwAR35A63OLY7vWx1lrfDqwqnaaJJF0em4j-K5xEZqEurbGLn7QKgjGTXbcYo#gid=0)
+- [ ] GCN smoothness 假設
+- [ ] 可能的架構
+- [ ] Introduction
+- [ ] GCN
 
 
 ---
