--- a/八月工作.md
+++ b/八月工作.md
@@ -152,7 +152,8 @@ survey papers and notes
 :::
 
 ## August 5
-- [x] 請cw跑[對照組實驗(何向南、SVAT OVAT)](https://docs.google.com/spreadsheets/d/1_vNZXMDKKCyYl0X6YyPbe9j0Aarkm4nczVmaS0I9wlI/edit?fbclid=IwAR35A63OLY7vWx1lrfDqwqnaaJJF0em4j-K5xEZqEurbGLn7QKgjGTXbcYo#gid=0)
+- [x] 跑[對照組實驗(何向南、SVAT OVAT)](https://docs.google.com/spreadsheets/d/1_vNZXMDKKCyYl0X6YyPbe9j0Aarkm4nczVmaS0I9wlI/edit?fbclid=IwAR35A63OLY7vWx1lrfDqwqnaaJJF0em4j-K5xEZqEurbGLn7QKgjGTXbcYo#gid=0)
+- [ ] Latent Adversarial Training of Graph Convolution Networks
 - [ ] GCN smoothness 假設
 - [ ] 可能的架構
 - [ ] Introduction
