--- a/八月工作.md
+++ b/八月工作.md
@@ -134,11 +134,11 @@ survey papers and notes
     - GNN
 :::
 :::spoiler on attribute
-- Latent Adversarial Training of Graph Convolution Networks
+- [Latent Adversarial Training of Graph Convolution Networks](https://www.notion.so/2020-08-05-Latent-Adversarial-Training-of-Graph-Convolution-Networks-278792ab44f743908df71b2294233d00)
     - GCN based
     - 在latent H上面加入擾動，比起在raw features上擾動，會更有generalization
 - GraphDefense: Towards Robust Graph Convolutional Networks
-- [Batch Virtual Adversarial Training for Graph Convolutional Networks](https://www.notion.so/Batch-virtual-adversarial-training-for-graph-convolutional-networks-dbf8320758554240b0ba6e5d9007269d)
+- 【對照】[Batch Virtual Adversarial Training for Graph Convolutional Networks](https://www.notion.so/Batch-virtual-adversarial-training-for-graph-convolutional-networks-dbf8320758554240b0ba6e5d9007269d)
     - GCN based
     - semi-supervised
     - 改良VAT，提出
@@ -153,12 +153,26 @@ survey papers and notes
 
 ## August 5
 - [x] 跑[對照組實驗(何向南、SVAT OVAT)](https://docs.google.com/spreadsheets/d/1_vNZXMDKKCyYl0X6YyPbe9j0Aarkm4nczVmaS0I9wlI/edit?fbclid=IwAR35A63OLY7vWx1lrfDqwqnaaJJF0em4j-K5xEZqEurbGLn7QKgjGTXbcYo#gid=0)
-- [ ] Latent Adversarial Training of Graph Convolution Networks
-- [ ] GCN smoothness 假設
-- [ ] 可能的架構
-- [ ] Introduction
-- [ ] GCN
+- [x] Latent Adversarial Training of Graph Convolution Networks
+- [x] GCN smoothness 假設
+- [x] 可能的架構
+- [x] 寫Introduction
+- [x] 跑&改GCN
 
+## August 6
+- [x] 寫Introduction
+- [x] 討論架構
+
+## August 7
+- [x] 寫Introduction
+- [x] 元大rehearsal
+- [x] 討論架構
+- [x] 交Introduction
+
+## August 10
+- [x] 更改元大PPT
+- [ ] paper: Adversarial Transformations for Semi-Supervised Learning
+- [ ] 改向南code
 
 ---
 
