--- a/八月工作.md
+++ b/八月工作.md
@@ -3,6 +3,13 @@ tags: ```lab``` ```2020``` ```August```
 
 [元大](/iM_lboSGTXWzIBbGupbQ2g)
 
+## August 14
+
+[0814 進度報告](/L2lMtxPMRiyJjxvnnS-GAA)
+
+- [ ] attack 實驗對照組: 只需改inputs即可
+
+
 ## July
 ### Graph - survey papers
 - [Graph embedding techniques, applications, and performance: A survey](https://www.notion.so/Graph-embedding-techniques-applications-and-performance-A-survey-6d449d8471bd40718d01953d9c52ab7b)
@@ -171,11 +178,17 @@ survey papers and notes
 
 ## August 10
 - [x] 更改元大PPT
-- [ ] paper: Adversarial Transformations for Semi-Supervised Learning
+- [x] paper: [Adversarial Transformations for Semi-Supervised Learning](https://www.notion.so/Adversarial-Transformations-for-Semi-Supervised-Learning-a88557c507ad4c968f3226878c8a3679)
 - [ ] 改向南code
+- [ ] 確認姿妏學姊code
+
+## August 11
+
+
 
 ---
 
 [推薦系統on graph](https://zhuanlan.zhihu.com/p/66521058)
 
+[KDD CUP](https://www.biendata.xyz/competition/kddcup_2020/)
 
